--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="pages" ng-show="isSelected() === 2">
 					<div id = "about">
 						<p>
-						Hi there, this is an App called MusicBox. Its an API project based on the SoundCloud API built with ANGULAR.JS. It basically allow you to search for songs based on the song title, the song artist or any related song based on the key to your search. You can also listen to songs and download them, if you would love to. 
+						Hi there, this is an App called MusicBox. Its an API project based on the SoundCloud API built with ANGULAR.JS. It basically allow you to search for songs based on the song title, the song artist or any related song based on the key to your search. You can also listen to songs and download that particular song if it's downloadable... Have Fun!!!
 
 						</p>
 					</div>
