edit the footer links to match the current details

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 					</div>
 				</div>
 			<footer>
-				<a href = "http://facebook.com/gafreemaitre" class="social-icon"><img src = "img/facebook.jpg" alt = ""></a>
+				<a href = "http://facebook.com/callmesurge" class="social-icon"><img src = "img/facebook.jpg" alt = ""></a>
 				<a href = "http://twitter.com/CallmeSurge" class="social-icon"><img src = "img/twi.jpg" alt = ""></a>
-				<a href = "http://instagram.com/callme_surge" class="social-icon"><img src = "img/insta.png" alt = ""></a>
+				<a href = "http://instagram.com/callmesurge" class="social-icon"><img src = "img/insta.png" alt = ""></a>
 				<p>&copy; CallmeSurge 2014. | <a href = "http://twitter.com/intent/tweet?screen_name=ThisIsAndela">@ThisIsAndela</a> | <a href = "http://andela.co">Andela.co</a></p>
 			</footer>
 
